[gd_scene load_steps=11 format=3 uid="uid://bbyqb78v0mmni"]

[ext_resource type="Script" uid="uid://c1q8q0qfha6w2" path="res://UI/Scripts/title_screen.gd" id="1_coop4"]
[ext_resource type="Texture2D" uid="uid://b7gl0kfxspl3e" path="res://UI/Visuals/title_screen.png" id="2_coop4"]
[ext_resource type="Texture2D" uid="uid://5vpliqep21eh" path="res://UI/Visuals/logo-sheet.png" id="3_5whv5"]
[ext_resource type="Texture2D" uid="uid://ciwt61thqosod" path="res://UI/Visuals/asgore in truck.png" id="3_816ia"]
[ext_resource type="Texture2D" uid="uid://cpyhgk446ycq6" path="res://UI/Visuals/titledess.png" id="4_udsnl"]
[ext_resource type="FontFile" uid="uid://d6rswd5tsvq0" path="res://_Global/Fonts/DefaultMono.ttf" id="5_tuktx"]
[ext_resource type="Script" uid="uid://ri47f5qti7h5" path="res://UI/Scripts/menu_option.gd" id="6_nmnw7"]

[sub_resource type="Animation" id="Animation_816ia"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Logo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(165, 29)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Logo/Logo_Ber:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Logo/Logo_Gen:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Logo/Logo_Truck:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ColorRect:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ColorRect:mouse_filter")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_5whv5"]
resource_name = "intro"
length = 2.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Logo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.333333, 0.566667, 0.7, 0.9, 1.1, 1.23333, 1.46667, 1.96667, 2.23333),
"transitions": PackedFloat32Array(0.2, 1.1, 1, 0.2, 1.1, 1, 1.90273, 1.1, 2.80403, 1, 1),
"update": 0,
"values": [Vector2(165, 117), Vector2(165, 109), Vector2(165, 117), Vector2(165, 117), Vector2(165, 112.965), Vector2(165, 117), Vector2(165, 117), Vector2(165, 109), Vector2(165, 112.965), Vector2(165, 25), Vector2(165, 29)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Logo/Logo_Ber:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.253312, 0.333333),
"transitions": PackedFloat32Array(0.2, 1.1, 0.2),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.1, 1.1), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Logo/Logo_Gen:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.566667, 0.819979, 0.9),
"transitions": PackedFloat32Array(1, 0.2, 1.1, 0.2),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(1.1, 1.1), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Logo/Logo_Truck:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.1, 1.35331, 1.43333),
"transitions": PackedFloat32Array(1, 0.2, 1.1, 0.2),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(1.1, 1.1), Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ColorRect:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.53333, 2.26667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ColorRect:mouse_filter")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1.96667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_udsnl"]
_data = {
&"RESET": SubResource("Animation_816ia"),
&"intro": SubResource("Animation_5whv5")
}

[node name="TitleScreen" type="Node"]
script = ExtResource("1_coop4")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(160, 120)
texture = ExtResource("2_coop4")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(198, 121)
texture = ExtResource("3_816ia")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(101, 208)
texture = ExtResource("4_udsnl")

[node name="Play" type="RichTextLabel" parent="."]
offset_left = 21.0
offset_top = 65.0
offset_right = 89.0
offset_bottom = 105.0
scale = Vector2(1.5, 1.5)
theme_override_constants/outline_size = 4
theme_override_fonts/normal_font = ExtResource("5_tuktx")
text = "Play"
scroll_active = false
script = ExtResource("6_nmnw7")

[node name="Options" type="RichTextLabel" parent="."]
offset_left = 21.0
offset_top = 90.0
offset_right = 89.0
offset_bottom = 130.0
scale = Vector2(1.245, 1.5)
theme_override_constants/outline_size = 4
theme_override_fonts/normal_font = ExtResource("5_tuktx")
text = "Options"
scroll_active = false
script = ExtResource("6_nmnw7")

[node name="Quit" type="RichTextLabel" parent="."]
offset_left = 21.0
offset_top = 117.0
offset_right = 89.0
offset_bottom = 157.0
scale = Vector2(1.5, 1.5)
theme_override_constants/outline_size = 4
theme_override_fonts/normal_font = ExtResource("5_tuktx")
text = "Quit"
scroll_active = false
script = ExtResource("6_nmnw7")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
offset_right = 320.0
offset_bottom = 240.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Logo" type="Node2D" parent="."]
position = Vector2(165, 29)

[node name="Logo_Ber" type="Sprite2D" parent="Logo"]
texture = ExtResource("3_5whv5")
hframes = 4

[node name="Logo_Gen" type="Sprite2D" parent="Logo"]
texture = ExtResource("3_5whv5")
hframes = 4
frame = 1

[node name="Logo_Truck" type="Sprite2D" parent="Logo"]
texture = ExtResource("3_5whv5")
hframes = 4
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_udsnl")
}

[connection signal="gui_input" from="Play" to="." method="_on_play_gui_input"]
[connection signal="gui_input" from="Play" to="Play" method="_on_gui_input"]
[connection signal="menu_option_clicked" from="Play" to="." method="_on_menu_option_clicked"]
[connection signal="mouse_entered" from="Play" to="Play" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Play" to="Play" method="_on_mouse_exited"]
[connection signal="gui_input" from="Options" to="." method="_on_play_gui_input"]
[connection signal="gui_input" from="Options" to="Options" method="_on_gui_input"]
[connection signal="menu_option_clicked" from="Options" to="." method="_on_menu_option_clicked"]
[connection signal="mouse_entered" from="Options" to="Options" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Options" to="Options" method="_on_mouse_exited"]
[connection signal="gui_input" from="Quit" to="." method="_on_play_gui_input"]
[connection signal="gui_input" from="Quit" to="Quit" method="_on_gui_input"]
[connection signal="menu_option_clicked" from="Quit" to="." method="_on_menu_option_clicked"]
[connection signal="mouse_entered" from="Quit" to="Quit" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Quit" to="Quit" method="_on_mouse_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
